# SportsBetting

./: README.md  main.py  pyproject.toml  sports_betting.py
data_collection/: scraping_strategies.py  yahoo_scraper.py
database/: db_manager.py
ml/: model_trainer.py
models/: player_prop_predictor.py  team_win_predictor.py
