[project]
name = "sportsbetting"
version = "0.1.0"
description = "Sports betting app using regression models and playwright"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "playwright>=1.52.0",
    "psycopg2>=2.9.10",
    "rich>=14.0.0",
    "scikit-learn>=1.7.1",
    "selenium>=4.33.0",
    "xgboost>=3.0.2",
]
